fixes spacing and margin on watch on all sizes

--- a/_sass/06_components/explore.scss
+++ b/_sass/06_components/explore.scss
@@ -12,7 +12,7 @@
 
     @media #{$large-up} {
       height: 28rem;
-      width: calc(25% - .75rem);
+      width: calc(25% - 1.1rem);
     }
   }
 
